fix: some spacing bugs

--- a/client/src/styles/customised-bootstrap/variables.scss
+++ b/client/src/styles/customised-bootstrap/variables.scss
@@ -762,8 +762,8 @@ $table-hover-bg-factor: 0.1;
 $table-hover-bg: rgba($gray-100, $table-hover-bg-factor);
 
 $table-border-factor: 1;
-$table-border-width: var(--#{prefix}border-width);
-$table-border-color: rgba($gray-800, $table-border-factor);
+$table-border-width: 0.5pt;
+$table-border-color: rgba($dark-border-subtle, $table-border-factor);
 
 $table-striped-order: odd;
 $table-striped-columns-order: even;
@@ -876,7 +876,7 @@ $btn-active-border-tint-amount: 8%;
 // Forms
 
 // scss-docs-start form-text-variables
-$form-text-margin-top: $spacer * 0.25;
+$form-text-margin-top: $spacer * 0.5;
 $form-text-font-size: $small-font-size;
 $form-text-font-style: null !default;
 $form-text-font-weight: null !default;
@@ -908,9 +908,9 @@ $input-padding-x-lg: $input-btn-padding-x-lg;
 $input-font-size-lg: $input-btn-font-size-lg;
 
 $input-bg: var(--#{$prefix}tertiary-bg);
-$input-disabled-color: null !default;
-$input-disabled-bg: var(--#{$prefix}secondary-bg);
-$input-disabled-border-color: null !default;
+$input-disabled-color: var(--#{$prefix}tertiary-color);
+$input-disabled-bg: var(--#{$prefix}secondary);
+$input-disabled-border-color: null;
 
 $input-color: var(--#{$prefix}body-color) !default;
 $input-border-color: $input-bg;
@@ -1004,7 +1004,7 @@ $input-group-addon-padding-y: $input-padding-y;
 $input-group-addon-padding-x: $input-padding-x;
 $input-group-addon-font-weight: $input-font-weight;
 $input-group-addon-color: $input-color;
-$input-group-addon-bg: var(--bs-gray-700);
+$input-group-addon-bg: $input-bg;
 $input-group-addon-border-color: $input-group-addon-bg;
 // scss-docs-end input-group-variables
 
